force-app/main/default/objects/QuestionDefinedResponse__c/QuestionDefinedResponse__c.object-meta.xml
<CustomObject>
    <description>Question Defined Response defines the acceptable responses for a Question. Question Defined Response is related to Question and Question Defined Response Variant.</description>
    <label>Question Defined Response</label>
    <nameField>
        <displayFormat>QBDR-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Defined Response</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>