force-app/main/default/objects/QuestionDefinedResponse__c/fields/DefinedResponseOrder__c.field-meta.xml
<CustomField>
    <fullName>DefinedResponseOrder__c</fullName>
    <label>Defined Response Order</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>