force-app/main/default/objects/QuestionDefinedResponse__c/fields/DefinedResponseText__c.field-meta.xml
<CustomField>
    <fullName>DefinedResponseText__c</fullName>
    <label>Defined Response Text</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>