force-app/main/default/objects/QuestionDefinedResponse__c/fields/Exception__c.field-meta.xml
<CustomField>
    <fullName>Exception__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exception</label>
    <referenceTo>Exception__c</referenceTo>
    <relationshipLabel>Question Defined Response</relationshipLabel>
    <relationshipName>Question_Defined_Response</relationshipName>
    <type>Lookup</type>
</CustomField>