force-app/main/default/objects/QuestionDefinedResponse__c/fields/ExceptionCode__c.field-meta.xml
<CustomField>
    <fullName>ExceptionCode__c</fullName>
    <formula>Exception__r.ExceptionCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exception Code</label>
    <type>Text</type>
</CustomField>