force-app/main/default/objects/QuestionDefinedResponse__c/fields/OneHubAnswerId__c.field-meta.xml
<CustomField>
    <fullName>OneHubAnswerId__c</fullName>
    <externalId>true</externalId>
    <label>One Hub Answer Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>