force-app/main/default/objects/QuestionDefinedResponse__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Question Defined Response (SurveyQuestionBank)</relationshipLabel>
    <relationshipName>Question_Defined_Response1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>